configuracion del proyecto

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,15 @@
     // File Layout
     "rootDir": "src",
     "outDir": "dist/",
+    
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
-    "target": "esnext",
+    "module": "ESnext",
+    "target": "ES2020",
+    "esModuleInterop": true,
+    "moduleResolution": "Node",
+    
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
@@ -35,7 +39,7 @@
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false,
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
